NEW260607
[GStreamer][MSE] FastSeek is broken
https://bugs.webkit.org/show_bug.cgi?id=260607
Summary [GStreamer][MSE] FastSeek is broken
Jean-Yves Avenard [:jya]
Reported 2023-08-23 06:24:33 PDT
Seen in bug 260185. With MSE, fastSeek is broken in that it never seek to the nearest keyframe and performs identical seek as a normal seek. Additionally, in bug 260185, infrastructure has been put in place to make the seek operation asynchronous and to only complete once data has been received by the MediaSource. This is a task that wasn't completed in 260185 for the sake of expediency.
Attachments
Philippe Normand
Comment 1 2023-08-23 08:27:22 PDT
I guess we should use this seek flag, GST_SEEK_FLAG_KEY_UNIT ...
Philippe Normand
Comment 2 2023-09-07 07:34:15 PDT
Philippe Normand
Comment 3 2023-09-07 07:36:02 PDT
(In reply to Philippe Normand from comment #1) > I guess we should use this seek flag, GST_SEEK_FLAG_KEY_UNIT ... Strangely this broke the media/video-fast-seek.html test... Anyways, I started a patch but couldn't find tests. media/media-source/media-source-fastseek.html is already passing, even with current main, AFAICS.
Note You need to log in before you can comment on or make changes to this bug.